[package]
name = "lmake"
version = "0.1.2"
authors = ["snsvrno <snsvrno@tuta.io>"]

[dependencies]
clap = "2.29.1"
toml = "0.4.5"
ansi_term = "0.10.2"
serde = "1.0.27"
serde_derive = "1.0.27"
rand = "0.4"
regex = "0.2.6"
git2 = "0.6.11"

output = { git = "https://github.com/Snsvrno/output-lp-rs", tag = "0.1.0" }
# lpsettings = { git = "https://github.com/Snsvrno/lpsettings-rs", tag = "0.1.6" }
lpsettings = { path = "../lpsettings" }
version = { git = "https://github.com/Snsvrno/version-lp-rs", tag = "0.1.4" }